# AudioVisualizer

./: .gitignore  AV.vcxproj  AudioVisualizer.sln  AudioVisualizer.vcxproj  AudioVisualizer.vcxproj.filters  CMakeLists.txt  README.md  audioV.cpp  audioV.h
libs/rtaudio/: RtAudio.cpp
